--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 THEME=https://raw.githubusercontent.com/Bluemoondragon07/chime-theme/HEAD/theme.css
 BASE_THEME=light
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Kyle的数字花园
 SITE_BASE_URL=kyle-digital-garden.vercel.app
-SHOW_CREATED_TIMESTAMP=false
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
